<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Letreiro</string>
    <string name="action_sobre">Sobre o aplicativo</string>
    <string name="hello_world">Hello world!</string>
    <string name="versao_code">Versão 1.0.6</string>
    <string name="desenvolvido_por">Desenvolvido por: Alessandro Menezes</string>
    <string name="email_contato">E-mail: alessandromenezes22@gmail.com</string>
    <string name="hint_texto">Digite um texto aqui</string>
    <string name="button_save">Exibir letreiro</string>
    <string name="button_clear">Limpar texto</string>
    <string name="tamanho_fonte">Tamanho da fonte</string>
    <string name="tempo_letreiro">Velocidade</string>
    <string name="exibir_hora">Exibir hora</string>
    <string name="piscar_letreiro">Piscar texto</string>
    <string name="fonte_letreiro_led">Fonte LED</string>
    <string name="texto_letreiro">Texto do letreiro</string>
    <string name="nome_fonte_led">bold_led_board-7.ttf</string>
    <string name="title_activity_letreiro">Letreiro</string>
    <string name="title_activity_sobre">Sobre o Letreiro</string>
    <string name="action_settings">Settings</string>
    <string name="ad_unit_id">ca-app-pub-2404629022505297/2443944965</string>

</resources>