<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context=".SobreActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="50dp" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/versao_code"
            android:textColor="#3b5998"
            android:textStyle="normal"
            android:textSize="20dp" />
        
        <ImageView 
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher"
            />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/desenvolvido_por"
            android:textColor="#3b5998"
            android:textStyle="normal"
            android:textSize="15dp" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email_contato"
            android:textColor="#3b5998"
            android:textStyle="normal"
            android:textSize="15dp" />
        
        
        
    </LinearLayout>

</ScrollView>