<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b5998"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:context=".MainActivity" >

            <!-- Início do texto do letreiro -->

            <TextView
                style="@style/TemaFonteBranca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/texto_letreiro" />

            <EditText
                android:id="@+id/edit_text_texto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:hint="@string/hint_texto"
                android:singleLine="true"
                android:textSize="25dp" />
            <!-- Fim do texto do letreiro -->


            <!-- Início do tamanho da fonte -->

            <TextView
                style="@style/TemaFonteBranca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/tamanho_fonte" />

            <SeekBar
                android:id="@+id/seek_bar_tamanho_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="400"
                android:progress="100" />
            <!-- Fim do tamanho da fonte -->


            <!-- Início da velocidade do letreiro -->

            <TextView
                style="@style/TemaFonteBranca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/tempo_letreiro" />

            <SeekBar
                android:id="@+id/seek_bar_tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="500"
                android:progress="200" />
            <!-- Fim da velocidade do letreiro -->


            <!-- Início checkbox -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/fonte_letreiro_led"
                    style="@style/TemaFonteBranca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fonte_letreiro_led" />

                <CheckBox
                    android:id="@+id/check_box_piscar"
                    style="@style/TemaFonteBranca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/piscar_letreiro" />
            </LinearLayout>
            <!-- Fim checkbox -->


            <!-- Início do botão salvar -->

            <Button
                android:id="@+id/button_salvar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
               	android:paddingTop="10dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:onClick="salvarConfiguracao"
                android:text="@string/button_salvar" />
            <!-- Fim do botão salvar -->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <com.google.ads.AdView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5638464060914850/1640977723"
            ads:loadAdOnCreate="true"
            ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID" />
    </LinearLayout>

</LinearLayout>